--- a/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
+++ b/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
@@ -126,7 +126,7 @@ Erweitert
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-md-8'>
-<form data-turbo="false" class="simple_form new_certificates_list" id="new_certificates_list" novalidate="novalidate" action="/2024/mv-cup/certificates/lists" accept-charset="UTF-8" method="post"><div class='card'>
+<form data-turbo="false" class="simple_form new_certificates_list" id="new_certificates_list" target="_blank" novalidate="novalidate" action="/2024/mv-cup/certificates/lists" accept-charset="UTF-8" method="post"><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Urkunden</h4>
