Veränderbare Wettkämpfe anzeigen

--- a/app/views/home/_competitions_card.html.haml
+++ b/app/views/home/_competitions_card.html.haml
@@ -10,6 +10,12 @@
       .list-group.list-group-flush
         - competitions.each do |competition|
           = link_to(competition_path(competition), class: 'list-group-item list-group-item-action') do
+            - if can?(:edit, competition)
+              .float-end
+                .far.fa-edit
+                - unless competition.visible?
+                  %br
+                  .far.fa-eye-slash
             .d-flex.flex-row
               - disciplines = competition.disciplines.sort.map(&:key)
               - if disciplines.count == 0
