--- a/app/views/competitions/score/results/index.html.haml
+++ b/app/views/competitions/score/results/index.html.haml
@@ -2,7 +2,7 @@
 
 - cache_if(current_user.nil?, @competition) do
   .row.g-4
-    .col-md-8
+    .col-lg-8
       = card(resource_class.model_name.human(count: :many)) do |c|
         - if resource_collection.exists?
           - c.direct do
