Anmelden von Mannschaften und Einzelstartern
refs #13

--- a/app/views/competitions/teams/_index_table.html.haml
+++ b/app/views/competitions/teams/_index_table.html.haml
@@ -9,6 +9,10 @@
   - resource_collection.each do |team|
     %tr
       %td
+        - if can?(:edit, team) && team.applicant == current_user
+          .far.fa-edit
+        - if can?(:manage, team) && team.applicant.present?
+          .far.fa-id-card{ title: "Angemeldet durch #{team.applicant.name}" }
         = team.full_name
         = team_badge(team&.fire_sport_statistics_team, team.band.gender)
       - band.team_tags.each do |tag|
