--- a/spec/fixtures/views/People_People_managements_uses_CRUD-new-with-errors/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-new-with-errors/view.html
@@ -149,7 +149,7 @@ Erweitert
 <div class="form-group string required person_first_name form-group-valid"><label class="control-label string required" for="person_first_name">Vorname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="first-name" name="person[first_name]" id="person_first_name" /></div>
 </div>
 <div class='col-md-6'>
-<div class="form-group string required person_last_name form-group-invalid"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" aria-invalid="true" type="text" value="" name="person[last_name]" id="person_last_name" /><div class="invalid-feedback">Nachname muss ausgefüllt werden</div></div>
+<div class="form-group string required person_last_name form-group-invalid"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" aria-invalid="true" type="text" name="person[last_name]" id="person_last_name" /><div class="invalid-feedback">Nachname muss ausgefüllt werden</div></div>
 </div>
 </div>
 <div class='row'>
