--- a/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
+++ b/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
@@ -211,6 +211,7 @@ Außer der Wertung
 <div class='d-grid gap-2'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
 <a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
 </div>
 
