--- a/app/views/competitions/people/_form.html.haml
+++ b/app/views/competitions/people/_form.html.haml
@@ -1,47 +1,59 @@
 - c.body do
   - unless @person.persisted?
     = hidden_field_tag :band_id, @person.band_id
-  = f.association :band, disabled: true, collection: [[@person.band.name, @person.band_id]]
 
-  .form-group.string
-    %label.string.control-label{ for: 'person_suggestion' } Schnelleingabe
-    %input.string.form-control{ name: 'person_suggestion', id: 'person_suggestion', type: 'text', data: { team_name: @person.team&.name }, autocomplete: :off }
-  .suggestions-entries.for-people
-    %table.table.table-hover.table-condensed
+  - if params[:form] == 'registration_hint'
+    = hidden_field_tag :form, 'registration_hint'
+    = f.input :registration_hint, input_html: { rows: 4 }
 
-  .row
-    .col-md-6
-      = f.input :first_name
-    .col-md-6
-      = f.input :last_name
+  - else
+    = f.association :band, disabled: true, collection: [[@person.band.name, @person.band_id]]
 
-  .row
-    - if @person.team.nil? || !@person.team.persisted?
+    .form-group.string
+      %label.string.control-label{ for: 'person_suggestion' } Schnelleingabe
+      %input.string.form-control{ name: 'person_suggestion', id: 'person_suggestion', type: 'text', data: { team_name: @person.team&.name }, autocomplete: :off }
+    .suggestions-entries.for-people
+      %table.table.table-hover.table-condensed
+
+    .row
       .col-md-6
-        = f.association :team, label_method: ->(team) { team.full_name_with_band }, label: 'Vorhandene Mannschaft', collection: @person.band.teams.sort
+        = f.input :first_name
       .col-md-6
-        %datalist#team-names
-          - @competition.teams.reorder(:name).distinct.pluck(:name).each do |team_name|
-            %option{ value: team_name }
-        = f.input :create_team_name, input_html: { list: 'team-names' }
-    - else
-      .col-md-6
-        %strong Mannschaft:
-        = @person.team.full_name
-      = f.hidden_field :team_id
-    - if @competition.show_bib_numbers?
-      .col-md-6
-        = f.input :bib_number
+        = f.input :last_name
 
-  - if @person.band.person_tags.present?
-    = f.input :tags, as: :check_boxes, collection: @person.band.person_tags
+    .row
+      - if @person.team.nil? || !@person.team.persisted?
+        .col-md-6
+          = f.association :team, label_method: ->(team) { team.full_name_with_band }, label: 'Vorhandene Mannschaft', collection: @person.band.teams.sort
+        .col-md-6
+          %datalist#team-names
+            - @competition.teams.reorder(:name).distinct.pluck(:name).each do |team_name|
+              %option{ value: team_name }
+          = f.input :create_team_name, input_html: { list: 'team-names' }
+      - else
+        .col-md-6
+          %strong Mannschaft:
+          = @person.team.full_name
+        = f.hidden_field :team_id
+      - if @competition.show_bib_numbers?
+        .col-md-6
+          = f.input :bib_number
 
-  = f.hidden_field :fire_sport_statistics_person_id, data: { first_name: @person.fire_sport_statistics_person&.first_name, last_name: @person.fire_sport_statistics_person&.last_name, gender: @person.fire_sport_statistics_person&.gender }
+    - if @person.band.person_tags.present?
+      = f.input :tags, as: :check_boxes, collection: @person.band.person_tags
 
-  .mb-0.mt-3 Verknüpfung
-  = render('connected', person: @person, remove: true)
-  %small.form-text.text-muted Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.
+    = f.hidden_field :fire_sport_statistics_person_id, data: { first_name: @person.fire_sport_statistics_person&.first_name, last_name: @person.fire_sport_statistics_person&.last_name, gender: @person.fire_sport_statistics_person&.gender }
 
+    .mb-0.mt-3 Verknüpfung
+    = render('connected', person: @person, remove: true)
+    %small.form-text.text-muted Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.
+
+    - if @person.applicant.present?
+      %fieldset.group
+        .col-md-6
+          %strong Angemeldet durch:
+          = @person.applicant.name
+        = f.input :registration_hint, input_html: { rows: 4 }
 
 - c.footer do
   = f.primary_button :submit
