--- a/app/views/competitions/people/show.html.haml
+++ b/app/views/competitions/people/show.html.haml
@@ -30,6 +30,19 @@
           %td{ colspan: 2 }
             = render('connected', person: @person, remove: false)
 
+        - if can?(:edit, @person)
+          - if @person.applicant.present?
+            %tr
+              %th Angemeldet durch
+              %td= @person.applicant.name
+          - if @person.registration_hint.present?
+            %tr
+              %th
+                = Person.human_attribute_name(:registration_hint)
+                .small.text-muted
+                  Diese Hinweise werden nur dir<br/> und dem Verwaltern<br/> des Wettkampfes angezeigt.
+              %td= simple_format(@person.registration_hint)
+
   - if can?(:edit, @person)
     .col-lg-4
       = card(t('a.actions')) do |c|
@@ -38,6 +51,7 @@
         - c.body do
           .d-grid.gap-2
             = btn_link_to 'Bearbeiten', action: :edit
+            = btn_link_to 'Anmeldungshinweise bearbeiten', { action: :edit, form: 'registration_hint' }
             = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Wettkämpfer wirklich löschen? Die zugehörigen Ergebnisse werden gelöscht!' }
 .row
   .col-lg-8
