--- a/app/views/competitions/teams/_form.html.haml
+++ b/app/views/competitions/teams/_form.html.haml
@@ -1,19 +1,31 @@
 - c.body do
   - unless @team.persisted?
     = hidden_field_tag :band_id, @team.band_id
-  = f.association :band, disabled: true
-  = f.input :name, input_html: { autocomplete: :off }, hint: 'Keine Nummern im Namen angeben!'
-  .suggestions-entries.for-teams
-    %table.table.table-hover.table-condensed
-  = f.input :shortcut, input_html: { maxlength: 12 }, hint: 'Keine Nummern im Namen angeben!'
-  = f.input :number, hint: 'Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.'
-  - if @team.band.team_tags.present?
-    = f.input :tags, as: :check_boxes, collection: @team.band.team_tags
-  = f.hidden_field :fire_sport_statistics_team_id, data: { name: @team.fire_sport_statistics_team&.name }
+  - if params[:form] == 'registration_hint'
+    = hidden_field_tag :form, 'registration_hint'
+    = f.input :registration_hint, input_html: { rows: 4 }
+  - else
+    = f.association :band, disabled: true
+    = f.input :name, input_html: { autocomplete: :off }, hint: 'Keine Nummern im Namen angeben!'
+    .suggestions-entries.for-teams
+      %table.table.table-hover.table-condensed
+    = f.input :shortcut, input_html: { maxlength: 12 }, hint: 'Keine Nummern im Namen angeben!'
+    = f.input :number, hint: 'Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.'
+    - if @team.band.team_tags.present?
+      = f.input :tags, as: :check_boxes, collection: @team.band.team_tags
+    = f.hidden_field :fire_sport_statistics_team_id, data: { name: @team.fire_sport_statistics_team&.name }
 
-  .mb-0.mt-3 Verknüpfung
-  = render('connected', team: @team, remove: true)
-  %small.form-text.text-muted Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.
+    .mb-0.mt-3 Verknüpfung
+    = render('connected', team: @team, remove: true)
+    %small.form-text.text-muted Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.
+
+    - if @team.applicant.present?
+      %fieldset.group
+        .col-md-6
+          %strong Angemeldet durch:
+          = @team.applicant.name
+        = f.input :registration_hint, input_html: { rows: 4 }
+
 - c.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_teams_path)
