--- a/app/views/competitions/teams/_people_table.html.haml
+++ b/app/views/competitions/teams/_people_table.html.haml
@@ -8,7 +8,7 @@
       - assessments = Assessment.requestable_for_person(resource_collection.first.band)
       - assessments.each do |assessment|
         %th{ title: assessment.name }= discipline_image assessment.discipline.key
-      - if can?(:edit, @competition)
+      - if can?(:edit, @team)
         %th
   %tbody
     - resource_collection.each do |person|
@@ -22,6 +22,6 @@
             %td{ title: "#{assessment.name}: #{request.type}" }= person_short_type(request)
           - else
             %td
-        - if can?(:edit, @competition)
+        - if can?(:edit, @team)
           %td
             = short_edit_link edit_assessment_requests_competition_person_path(id: person.id, return_to: 'team'), title: 'Wertungen bearbeiten'
