--- a/app/views/competitions/teams/index.html.haml
+++ b/app/views/competitions/teams/index.html.haml
@@ -9,10 +9,13 @@
       - c.body do
         .alert.alert-info= t('a.no_entries_found')
 
-    - if can?(:create, resource_class.new(competition: @competition, band:))
+    - if can?(:manage, @competition)
       - c.primary_actions do |actions|
         - actions.link_to t('a.add'), { action: :new, band_id: band.id }, end_icon: :square_plus
 
       - c.actions do |actions|
         - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
         - actions.link_to 'XLS', { format: :xlsx }, end_icon: :file_excel
+    - elsif @competition.registration_possible?
+      - c.primary_actions do |actions|
+        - actions.link_to t('a.add'), { action: :new, band_id: band.id }, end_icon: :square_plus
