--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -28,6 +28,18 @@
         %tr
           %td{ colspan: 2 }
             = render('connected', team: @team, remove: false)
+        - if can?(:edit, @team)
+          - if @team.applicant.present?
+            %tr
+              %th Angemeldet durch
+              %td= @team.applicant.name
+          - if @team.registration_hint.present?
+            %tr
+              %th
+                = Team.human_attribute_name(:registration_hint)
+                .small.text-muted
+                  Diese Hinweise werden nur dir<br/> und dem Verwaltern<br/> des Wettkampfes angezeigt.
+              %td= simple_format(@team.registration_hint)
 
     = card("Gewünschte #{Assessment.model_name.human(count: :many)}") do |c|
       - if can?(:edit, @team)
@@ -49,7 +61,7 @@
                 - else
                   %i.far.fa-xmark
 
-  - if can?(:edit, @competition)
+  - if can?(:edit, @team)
     .col-lg-4
       = card(t('a.actions')) do |c|
         - c.primary_actions do |actions|
@@ -58,13 +70,15 @@
           .d-grid.gap-2
             = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team, return_to: 'team')
             = btn_link_to 'Name bearbeiten', { action: :edit }
+            = btn_link_to 'Anmeldungshinweise bearbeiten', { action: :edit, form: 'registration_hint' }
             = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
 
-  - if can?(:edit, @competition) || @team.people.exists?
+  - if can?(:edit, @team) || @team.people.exists?
     .col-lg-12#people-table
       = card(Team.human_attribute_name(:people)) do |c|
-        - c.primary_actions do |actions|
-          - actions.link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team, return_to: 'team'), end_icon: :square_plus
+        - if can?(:edit, @team)
+          - c.primary_actions do |actions|
+            - actions.link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team, return_to: 'team'), end_icon: :square_plus
         - if @team.people.exists?
           - c.direct do
             = render('people_table', resource_collection: @team.people)
