--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,12 +3,17 @@
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
       = card('Benutzerkontos bearbeiten') do |c|
         - c.body do
-          = f.input :name, autofocus: true
-          = f.input :email
-          - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-            %p Bestätigung erwartet: #{resource.unconfirmed_email}
-          = f.input :password, input_html: { autocomplete: 'new-password' }, hint: 'Freilassen, wenn keine Änderung gewünscht ist'
-          = f.input :password_confirmation, input_html: { autocomplete: 'new-password' }
+          %fieldset.group
+            %legend Allgemein
+            = f.input :name, autofocus: true
+            = f.input :email
+            - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+              %p Bestätigung erwartet: #{resource.unconfirmed_email}
+            = f.input :phone_number
+          %fieldset.group
+            %legend Passwortänderung
+            = f.input :password, input_html: { autocomplete: 'new-password' }, hint: 'Freilassen, wenn keine Änderung gewünscht ist'
+            = f.input :password_confirmation, input_html: { autocomplete: 'new-password' }
           = f.input :current_password, input_html: { autocomplete: 'current-password' }, hint: 'Aktuelles Passwort, um Änderungen zu bestätigen'
         - c.footer do
           = f.primary_button :submit
