--- a/spec/fixtures/views/People_People_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-show/view.html
@@ -191,6 +191,7 @@ Keine Verknüpfung mit einer vorhandenen Person
 <div class='card-body'>
 <div class='d-grid gap-2'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/UUID/edit">Bearbeiten</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
 <a data-turbo-method="delete" data-turbo-confirm="Wettkämpfer wirklich löschen? Die zugehörigen Ergebnisse werden gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/people/UUID">Löschen</a>
 </div>
 
