--- a/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
@@ -83,10 +83,17 @@
 </div>
 </div>
 <div class='card-body'>
+<fieldset class='group'>
+<legend>Allgemein</legend>
 <div class="form-group string required user_name"><label class="control-label string required" for="user_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="name" autofocus="autofocus" type="text" name="user[name]" id="user_name" /></div>
 <div class="form-group email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" type="email" name="user[email]" id="user_email" /></div>
+<div class="form-group tel optional user_phone_number"><label class="control-label tel optional" for="user_phone_number">Telefonnummer</label><input class="form-control string tel optional" autocomplete="tel" type="tel" name="user[phone_number]" id="user_phone_number" /><small class="form-text text-muted">Die Telefonnummer dient für Rückfragen bei Mannschaftsanmeldungen. Sie kann bei jeder Anmeldung auch später noch geändert werden.</small></div>
+</fieldset>
+<fieldset class='group'>
+<legend>Passwort</legend>
 <div class="form-group password required user_password"><label class="control-label password required" for="user_password">Passwort <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password]" id="user_password" /></div>
 <div class="form-group password required user_password_confirmation"><label class="control-label password required" for="user_password_confirmation">Passwortbestätigung <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password_confirmation]" id="user_password_confirmation" /></div>
+</fieldset>
 
 </div>
 <div class='card-footer'>
