--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -17,6 +17,18 @@
               .far.fa-eye-slash
               Nicht öffentlich sichtbar
             = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
+      - if @competition.registration_possible?
+        .card-header.text-bg-info
+          .d-grid.gap-2.col-10.mx-auto
+            .text-center
+              .far.fa-id-card
+              Anmeldung bis #{l(@competition.registration_open_until)} möglich
+
+            - if @competition.bands.exists? && @competition.disciplines.exists?
+              = link_to 'Mannschaft anmelden', new_competition_team_path, class: 'btn btn-light btn-sm'
+              - if @competition.disciplines.single_disciplines.exists?
+                = link_to 'Einzelstarter anmelden', new_competition_person_path, class: 'btn btn-light btn-sm'
+
       - if can?(:edit, @competition)
         = render('next_step_card')
       .card-header
