--- a/spec/fixtures/views/Home_info_shows_info_page/view.html
+++ b/spec/fixtures/views/Home_info_shows_info_page/view.html
@@ -83,6 +83,7 @@
 </div>
 <div class='card-body'>
 <p>Besteht ein Bedürfnis, den Administrator und Entwickler dieser Seite zu kontaktieren, ist dies sehr wohl gewünscht. Für Anregungen oder Kritik bin ich immer offen. Falls es sich um einen Fehler in der Programmierung handelt, bitte ich darum, dass die URL der Seite kopiert wird und mit der E-Mail verschickt wird. So kann ich den Fehler schneller finden und auch beheben.</p>
+<p>Gerne kann auch ein <a href="https://github.com/Feuerwehrsport/feusport/issues">Issue über Github</a> angelegt werden. Eventuell hat sogar schon jemand anderes den gleichen Fehler gemeldet, dann kannst du seine Gedanken dort ergänzen.</p>
 </div>
 <table class='table'>
 <tr>
