Scroll-Bug auf Mobil beheben

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -75,7 +75,7 @@
       position: static
 
 @include media-breakpoint-down(sm)
-  .row > * , .container
+  .row > *
     padding-right: calc(var(--bs-gutter-x) * 0.3)
     padding-left: calc(var(--bs-gutter-x) * 0.3)
 
