--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-with-one/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-with-one/view.html
@@ -120,6 +120,8 @@ Erweitert
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
+<div class='row'>
+<div class='col-lg-12'>
 <div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
@@ -161,6 +163,8 @@ M
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/teams.xlsx">XLS
 <i class='far fa-file-excel'></i>
 </a>
+</div>
+</div>
 </div>
 </div>
 </div>
