Multiplikatoren in Datenbank hinterlegen

--- a/spec/fixtures/views/Home_disseminators_shows_disseminators_page/view.html
+++ b/spec/fixtures/views/Home_disseminators_shows_disseminators_page/view.html
@@ -96,7 +96,7 @@ Benutzer
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Max Mustermann</h4>
+<h4 class='m-0 py-2 ps-3'>Alfred Meier</h4>
 </div>
 </div>
 <table class='table'>
@@ -106,7 +106,7 @@ Benutzer
 </tr>
 <tr>
 <th>Position</th>
-<td>Geschäftsführer des KFV Rostock</td>
+<td>Chef</td>
 </tr>
 <tr>
 <th>E-Mail-Adresse</th>
@@ -114,91 +114,7 @@ Benutzer
 </tr>
 <tr>
 <th>Telefonnummer</th>
-<td></td>
-</tr>
-</table>
-
-</div>
-</div>
-<div class='col-md-6 col-lg-4'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Maria Mustermann</h4>
-</div>
-</div>
-<table class='table'>
-<tr>
-<th>LFV</th>
-<td>Brandenburg</td>
-</tr>
-<tr>
-<th>Position</th>
-<td>Fachausschuss Wettbewerbe</td>
-</tr>
-<tr>
-<th>E-Mail-Adresse</th>
-<td></td>
-</tr>
-<tr>
-<th>Telefonnummer</th>
 <td>0190 123456</td>
-</tr>
-</table>
-
-</div>
-</div>
-<div class='col-md-6 col-lg-4'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Fred Peters</h4>
-</div>
-</div>
-<table class='table'>
-<tr>
-<th>LFV</th>
-<td>Sachsen-Anhalt</td>
-</tr>
-<tr>
-<th>Position</th>
-<td>Feuerwehrsportler</td>
-</tr>
-<tr>
-<th>E-Mail-Adresse</th>
-<td>bar@foo.de</td>
-</tr>
-<tr>
-<th>Telefonnummer</th>
-<td>0190 123123</td>
-</tr>
-</table>
-
-</div>
-</div>
-<div class='col-md-6 col-lg-4'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Super Mann</h4>
-</div>
-</div>
-<table class='table'>
-<tr>
-<th>LFV</th>
-<td>Thüringen</td>
-</tr>
-<tr>
-<th>Position</th>
-<td>Organisator aus Taura</td>
-</tr>
-<tr>
-<th>E-Mail-Adresse</th>
-<td>blub@hans.de</td>
-</tr>
-<tr>
-<th>Telefonnummer</th>
-<td></td>
 </tr>
 </table>
 
