--- a/spec/fixtures/views/competitions_score_results_change_assessment_blocks_bad_changes-edit-with-error/view.html
+++ b/spec/fixtures/views/competitions_score_results_change_assessment_blocks_bad_changes-edit-with-error/view.html
@@ -55,7 +55,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Ergebnisse hinzufügen</p>
+<p class='lead m-0 ms-1'>Ergebnisse aktualisieren</p>
 
 </div>
 </header>
@@ -121,23 +121,38 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
+<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-lg-8'>
-<form class="simple_form new_score_result" id="new_score_result" novalidate="novalidate" action="/2024/mv-cup/score/results" accept-charset="UTF-8" method="post"><div class='card'>
+<form class="simple_form edit_score_result" id="edit_score_result_UUID" novalidate="novalidate" action="/2024/mv-cup/score/results/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Ergebnisse hinzufügen</h4>
+<h4 class='m-0 py-2 ps-3'>Ergebnisse aktualisieren</h4>
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group select required score_result_assessment"><label class="control-label select required" for="score_result_assessment_id">Wertung <abbr title="required">*</abbr></label><select class="form-select select required" name="score_result[assessment_id]" id="score_result_assessment_id"><option value="" label=" "></option>
-<option value="UUID">Hakenleitersteigen - Frauen</option></select><small class="form-text text-muted">Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.</small></div>
+<div class="form-group select required score_result_assessment form-group-invalid"><label class="control-label select required" for="score_result_assessment_id">Wertung <abbr title="required">*</abbr></label><select class="form-select is-invalid select required" aria-invalid="true" name="score_result[assessment_id]" id="score_result_assessment_id"><option value="" label=" "></option>
+<option value="UUID">Hakenleitersteigen - Frauen</option>
+<option value="UUID">Hakenleitersteigen - Männer</option>
+<option selected="selected" value="UUID">Löschangriff Nass - Frauen</option></select><div class="invalid-feedback">Wertung muss die gleiche Disziplin haben</div><small class="form-text text-muted">Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.</small></div>
 <div class="form-group string optional score_result_forced_name"><label class="control-label string optional" for="score_result_forced_name">Name</label><input class="form-control string optional" data-name-preview="1" type="text" name="score_result[forced_name]" id="score_result_forced_name" /><small class="form-text text-muted">Der Name wird automatisch aus den Wertungen und Kennzeichnungen generiert. Hier kann man ihn überschreiben.</small></div>
-<fieldset class='group bg-accent2'>
-Weitere Einstellungen sind nach dem Anlegen möglich.
+<fieldset class='group row'>
+<div class='col-lg-6'>
+<fieldset class="form-group boolean optional score_result_group_assessment"><div class="form-check"><input name="score_result[group_assessment]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_result[group_assessment]" id="score_result_group_assessment" /><label class="form-check-label boolean optional" for="score_result_group_assessment">Mannschaftswertung</label><small class="form-text text-muted">Eine Mannschaftswertung kann für eine Gesamtwertung wichtig sein.</small></div></fieldset>
+</div>
+<div class='col-lg-6'>
+<div class="form-group integer required score_result_group_run_count form-group-valid"><label class="control-label integer required" for="score_result_group_run_count">Wettkämpfer pro Disziplin <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="8" name="score_result[group_run_count]" id="score_result_group_run_count" /></div>
+<div class="form-group integer required score_result_group_score_count form-group-valid"><label class="control-label integer required" for="score_result_group_score_count">Wettkämpfer in Wertung <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="6" name="score_result[group_score_count]" id="score_result_group_score_count" /></div>
+<small class='text-muted'>Diese Werte sind nur bei Mannschaftswertungen der Einzeldisziplinen relevant.</small>
+</div>
+</fieldset>
+<fieldset class='group'>
+<legend>Berechnung der Ergebnisse</legend>
+<fieldset class="form-group radio_buttons required score_result_calculation_method form-group-valid"><div class="col-form-label pt-0">Berechnungsmethode <abbr title="required">*</abbr></div><input type="hidden" name="score_result[calculation_method]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input radio_buttons required" type="radio" value="default" checked="checked" name="score_result[calculation_method]" id="score_result_calculation_method_default" /><label class="form-check-label collection_radio_buttons" for="score_result_calculation_method_default">Standard (Bester Lauf in der Wertung)</label></div><div class="form-check"><input class="form-check-input radio_buttons required" type="radio" value="sum_of_two" name="score_result[calculation_method]" id="score_result_calculation_method_sum_of_two" /><label class="form-check-label collection_radio_buttons" for="score_result_calculation_method_sum_of_two">Summe der besten zwei Läufe</label></div></fieldset>
+<small class='text-muted'>Bei einigen Wettkämpfen gewinnt nicht der Schnellste, sondern der Kontinuierlichste.</small>
 </fieldset>
 <fieldset class='group'>
 <legend>Optional</legend>
@@ -151,7 +166,7 @@ Weitere Einstellungen sind nach dem Anlegen möglich.
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Ergebnisse erstellen</button>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Ergebnisse aktualisieren</button>
 <a class="btn btn-secondary" href="/2024/mv-cup/score/results">Abbrechen</a>
 </div>
 </div>
