--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-edit-with-error/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-edit-with-error/view.html
@@ -135,7 +135,7 @@ Erweitert
 </div>
 <div class='card-body'>
 <div class="form-group select required score_result_assessment form-group-invalid"><label class="control-label select required" for="score_result_assessment_id">Wertung <abbr title="required">*</abbr></label><select class="form-select is-invalid select required" aria-invalid="true" name="score_result[assessment_id]" id="score_result_assessment_id"><option value="" label=" "></option>
-<option value="UUID">Hakenleitersteigen - Frauen</option></select><div class="invalid-feedback">Wertung muss ausgefüllt werden</div><small class="form-text text-muted">Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.</small></div>
+<option value="UUID">Hakenleitersteigen - Frauen</option></select><div class="invalid-feedback">Wertung muss ausgefüllt werden und Wertung muss die gleiche Disziplin haben</div><small class="form-text text-muted">Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.</small></div>
 <div class="form-group string optional score_result_forced_name"><label class="control-label string optional" for="score_result_forced_name">Name</label><input class="form-control string optional" data-name-preview="1" type="text" name="score_result[forced_name]" id="score_result_forced_name" /><small class="form-text text-muted">Der Name wird automatisch aus den Wertungen und Kennzeichnungen generiert. Hier kann man ihn überschreiben.</small></div>
 <fieldset class='group row'>
 <div class='col-lg-6'>
