--- a/spec/fixtures/views/Home_home_shows_home_page/view.html
+++ b/spec/fixtures/views/Home_home_shows_home_page/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Überblick - Feuerwehrsport</title>
+<title>Aktuell - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -42,6 +42,23 @@
 <div class='container'>
 <h1>Willkommen auf feusport.de</h1>
 <p class='lead mb-0'>Dein Portal für Feuerwehrsport-Wettkämpfe</p>
+<h1></h1>
+
+</div>
+</header>
+<header class='page-tabs'>
+<div class='container'>
+<div class='nav nav-pills nav-tabs-responsive'>
+<div class='nav-item active'>
+<a class="nav-link active" aria-current="page" href="/">Aktuell
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/?year=2024">2024
+</a>
+</div>
+
+</div>
 
 </div>
 </header>
@@ -49,7 +66,8 @@
 <div class='alert-flash'>
 </div>
 </div>
-<div class='pb-4 mt-4 container'><div class='row g-4'>
+<div class='pb-4 mt-4 container'>
+<div class='row g-4'>
 <div class='col-lg-7 col-xl-8'>
 <div class='card'>
 <div class='card-header mt-0'>
