--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-assessment/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-assessment/view.html
@@ -135,7 +135,7 @@ Erweitert
 <h4 class='m-0 py-2 ps-3'>D-Cup</h4>
 </div>
 </div>
-<table class='table'>
+<table class='table table-sm small'>
 <thead>
 <tr>
 <th>Ort</th>
