--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
@@ -135,7 +135,7 @@ Erweitert
 <h4 class='m-0 py-2 ps-3'>D-Cup</h4>
 </div>
 </div>
-<table class='table'>
+<table class='table table-sm small'>
 <thead>
 <tr>
 <th>Ort</th>
@@ -143,6 +143,10 @@ Erweitert
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>Rostock</td>
+<td>29.02.2024</td>
+</tr>
 </tbody>
 </table>
 
@@ -189,7 +193,7 @@ Hakenleitersteigen - Männlich
 <thead>
 <th class='hide-xs'>Platz</th>
 <th>Team</th>
-<th>Rostock</th>
+<th class='small'>Rostock</th>
 <th class='hide-xs'>Teil.</th>
 <th class='hide-xs'>Bestzeit</th>
 <th>Punkte</th>
@@ -198,7 +202,7 @@ Hakenleitersteigen - Männlich
 <tr>
 <td class='hide-xs'>1</td>
 <td>Frauen-Team 1</td>
-<td><table class='team_assessments'>
+<td class='small'><table class='team_assessments'>
 <tr>
 <th class='hide-xs'>LA</th>
 <td>12,00 (10)</td>
@@ -212,7 +216,7 @@ Hakenleitersteigen - Männlich
 <tr>
 <td class='hide-xs'>2</td>
 <td>Frauen-Team 2</td>
-<td><table class='team_assessments'>
+<td class='small'><table class='team_assessments'>
 <tr>
 <th class='hide-xs'>LA</th>
 <td>13,00 (9)</td>
