--- a/app/views/competitions/series/rounds/_round_card.haml
+++ b/app/views/competitions/series/rounds/_round_card.haml
@@ -1,11 +1,11 @@
 = card_direct(round.name) do
-  %table.table
+  %table.table.table-sm.small
     %thead
       %tr
         %th Ort
         %th Datum
     %tbody
-      - round.cups.each do |cup|
+      - round.showable_cups(@competition).each do |cup|
         %tr
           %td= cup.competition_place
           %td= l(cup.competition_date)
